# typescript-sdk

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts  vitest.workspace.ts
.changeset/: config.json  green-dogs-wait.md
.github/workflows/: code-quality.yml
examples/: README.md
examples/base-sepolia-match/: .env.example  CHANGELOG.md  README.md  index.ts  package.json
examples/external-keychain/cancel-order/: README.md  index.ts  package.json
examples/external-keychain/create-wallet/: README.md  env.ts  index.ts  package.json
examples/external-keychain/deposit/: README.md  index.ts  package.json
examples/external-keychain/get-back-of-queue-wallet/: README.md  index.ts  package.json
examples/external-keychain/get-order-history/: README.md  index.ts  package.json
examples/external-keychain/get-wallet/: README.md  index.ts  package.json
examples/external-keychain/lookup-wallet/: README.md  index.ts  package.json
examples/external-keychain/pay-fees/: README.md  index.ts  package.json
examples/external-keychain/place-order/: README.md  index.ts  package.json
examples/external-keychain/withdraw/: README.md  index.ts  package.json
examples/external-match/: CHANGELOG.md  README.md  index.ts  package.json
examples/external-match/base-sepolia/: README.md  env.ts  index.ts  package.json
examples/external-match/basic/: README.md  index.ts  package.json
examples/external-match/direct-malleable-match/: README.md  env.ts  index.ts  package.json  tsconfig.json
examples/external-match/direct-match/: README.md  index.ts  package.json
examples/external-match/exact-output/: README.md  env.ts  index.ts  package.json
examples/gas-sponsorship/: CHANGELOG.md  README.md  index.ts  package.json
examples/in-kind-gas-sponsorship/: .env.example  CHANGELOG.md  README.md  index.ts  package.json
examples/malleable-external-match/: .env.example  CHANGELOG.md  README.md  index.ts  package.json
examples/native-eth-gas-sponsorship/: CHANGELOG.md  README.md  index.ts  package.json
examples/supported-tokens/: .env.example  CHANGELOG.md  README.md  index.ts  package.json
wasm/: Cargo.toml  build.sh  rust-toolchain.toml
wasm/src/: errors.rs  generation.rs  helpers.rs  key_rotation.rs  lib.rs  serde_def_types.rs  signature.rs  sol.rs  types.rs
wasm/src/circuit_types/: balance.rs  elgamal.rs  fixed_point.rs  keychain.rs  mod.rs  order.rs  transfers.rs  wallet.rs
wasm/src/common/: balances.rs  derivation.rs  keychain.rs  keyed_list.rs  mod.rs  orders.rs  types.rs
wasm/src/exports/: error.rs  helpers.rs  mod.rs
wasm/src/exports/byok/: cancel_order.rs  create_order.rs  create_wallet.rs  deposit.rs  error.rs  find_wallet.rs  generate_wallet_secrets.rs  get_pk_root_scalars.rs  key_rotation.rs  mod.rs  parse.rs  signature.rs  withdraw.rs
wasm/src/exports/byok/deposit/: error.rs  handler.rs  mod.rs  parse.rs
wasm/src/exports/byok/parameters/: cancel_order.rs  deposit.rs  mod.rs  order.rs  wallet.rs  withdraw.rs
wasm/src/exports/byok/utils/: derivation.rs
wasm/src/external_api/: create_wallet.rs  find_wallet.rs  http.rs  mod.rs  types.rs  wallet.rs  wallet_utils.rs
wasm/src/external_api/auth/: auth_helpers.rs  mod.rs
(+65 files in other folders)
