[package]
name = "renegade-utils"
description = "Utility functions from the Renegade relayer"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git", default-features = false }
sha2 = "0.10.8"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
wasm-bindgen = "0.2"

# === Contracts Repo Dependencies === #
contracts-common = { git = "https://github.com/renegade-fi/renegade-contracts.git" }

# === Cryptography / Arithmetic === #
ark-bn254 = "0.4"
ark-ed-on-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
num-bigint = { version = "0.4.3" }
num-traits = "0.2"
k256 = { version = "0.13", features = ["expose-field"] }
ruint = { version = "1.11.1", features = ["num-bigint"] }

# === Ethereum Utils === #
alloy-primitives = { version = "0.3.1", default-features = false }
ethers = "2"

# === Misc === #
base64 = "0.21"
derivative = "2.2"
eyre = "0.6"
hex = "0.4"
indexmap = "2.0.2"
itertools = "0.10"
lazy_static = "1.4"

# === Serde === #
serde = { version = "=1.0.197" }
serde_with = { version = "3.4", default-features = false, features = [
    "macros",
    "alloc",
] }
serde_json = "1.0.64"
postcard = { version = "1", default-features = false, features = ["alloc"] }

[dependencies.web-sys]
version = "0.3.4"
features = [ "console" ]
